--- a/src/main/resources/templates/front-end/included_mail.html
+++ b/src/main/resources/templates/front-end/included_mail.html
@@ -9,14 +9,12 @@
 				</div> -->
 				<div class="feed-back-row2">
 					<p>主旨</p>
-					<input type="text" placeholder="請輸入意見標題(15字內)" maxlength="80">
-				</div>
+					<input type="text" id="titleInput" name="opTitle" placeholder="請輸入意見標題(15字內)">
+				</div>			
 				<div class="feed-back-row3">
 					<p>內容</p>
-					<textarea placeholder="請輸入意見內容(150字內)" class="input-text" maxlength="620"
-						style="text-align: left; vertical-align: top;"></textarea>
-				</div>
-
+					<textarea id="contentInput" name="opContent" placeholder="請輸入意見內容(150字內)" class="input-text"></textarea><br>
+				</div>	
 				<div class="feed-back-button">
 					<button type="button" class="confirm">送出</button>
 					<button type="button" class="btn_model_close">取消</button>
